name:                urtec18
version:             1.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/derrickturk/urtec18#readme
license:             BSD3
license-file:        LICENSE
author:              Derrick W. Turk
maintainer:          dwt@terminusdatascience.com
copyright:           dwt | terminus data science, LLC
category:            Util
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable urtec18
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.3 && < 2
                     , text >= 1.2 && < 2
                     , filepath >= 1.4 && < 2
                     , directory >= 1.3 && < 2
                     , bytestring >= 0.10 && < 1
  ghc-options:       -Wall -O2
